<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_top_layout"
    android:paddingLeft="@dimen/padding_horizontal"
    android:paddingRight="@dimen/padding_horizontal"
    android:background="#000000">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/title"/>

    <LinearLayout
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="@dimen/margin_top_form"
        android:background="#FFF"
        android:padding="@dimen/padding_default">

        <TextView
            style="@style/FormLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"/>

        <EditText
            android:id="@+id/inNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama"
            android:textSize="@dimen/text_size_label"
            android:inputType="textPersonName"/>

        <TextView
            style="@style/FormLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:layout_marginTop="@dimen/margin_top_label"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan" />
        </RadioGroup>

        <TextView
            style="@style/FormLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobi"
            android:layout_marginTop="@dimen/margin_top_label"/>

        <CheckBox
            android:id="@+id/cbMembaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobi_membaca"/>

        <CheckBox
            android:id="@+id/cbCoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobi_coding"/>

        <CheckBox
            android:id="@+id/cbGaming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobi_gaming"/>

        <Button
            android:id="@+id/btnTampilkan"
            style="@style/ButtonTampilkanStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tombol_tampilkan"/>

        <TextView
            android:id="@+id/hasil"
            style="@style/HasilStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_hint"
            android:layout_marginTop="@dimen/margin_top_hasil"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>